examples/errors/18_cant_extend_group/definitions.tmd
#namespace <definitions>

group Widget;
group Root {
    + Widget
}

element Window -> Root;
element Text -> Widget {
    value: String
}